--- a/src/TextField/TextField.css
+++ b/src/TextField/TextField.css
@@ -2,6 +2,9 @@ input[type="text"] {
   border: 1px solid black;
   background-color: white;
   height: 40px;
-  padding: 4px;
+  padding: 4px 8px;
   box-sizing: border-box;
+}
+input[type="text"][disabled] {
+  background-color: gainsboro;
 }
