--- a/src/TextField/TextField.css
+++ b/src/TextField/TextField.css
@@ -6,5 +6,5 @@ input[type="text"] {
   box-sizing: border-box;
 }
 input[type="text"][disabled] {
-  background-color: gainsboro;
+  background-color: greenyellow;
 }
